Fixes columns overlapping when main contains wide pre (#56)
* WIP

* WIP

* WIP

--- a/_sass/jekyll-theme-cs50.scss
+++ b/_sass/jekyll-theme-cs50.scss
@@ -160,6 +160,7 @@ footer:empty {
 // Override column's padding, width
 main.col-md {
     max-width: 80rem;
+    overflow: auto;
     padding: 4rem 2rem;
 }
 
